# wissen

./: .editorconfig  .gitignore  Makefile  Makefile.in  README.md  bootstrap  configure.ac  project.clj  schema.sql
skel/: wissen
sql/: q-docs.sql  q-subjects.sql  q-systems.sql  q-topics.sql
src/wissen/: core.clj
test/wissen/: core_test.clj
